@@ -139,6 +139,7 @@ scales = [
 repeat_types = [
   "percent",
   "segno",
+  "tremolo",
   "unfold",
   "volta",
 ]
@@ -979,6 +980,7 @@ music_functions = [
   "skip",
   "slashedGrace",
   "slurDashPattern",
+  "staffHighlight",
   "storePredefinedDiagram",
   "stringTuning",
   "styledNoteHeads",
@@ -988,6 +990,8 @@ music_functions = [
   "tagGroup",
   "tempo",
   "temporary",
+  "textEndMark",
+  "textMark",
   "tieDashPattern",
   "time",
   "times",
@@ -1284,6 +1288,7 @@ music_commands = [
   "stopMeasureSpanner",
   "stopSlashedGraceMusic",
   "stopStaff",
+  "stopStaffHighlight",
   "tabFullNotation",
   "teeny",
   "textLengthOff",
@@ -1343,7 +1348,7 @@ markup_commands = [
   "combine",
   "compound-meter",
   "concat",
-  "conditional-circle-markup",
+  "conditional-trill-markup",
   "customTabClef",
   "dir-column",
   "discant",
@@ -1360,6 +1365,7 @@ markup_commands = [
   "epsfile",
   "eyeglasses",
   "fermata",
+  "figured-bass",
   "fill-line",
   "fill-with-pattern",
   "filled-box",
@@ -1535,6 +1541,7 @@ grobs = [
   "BreakAlignGroup",
   "BreakAlignment",
   "BreathingSign",
+  "CaesuraScript",
   "CenteredBarNumber",
   "CenteredBarNumberLineSpanner",
   "ChordName",
@@ -1550,6 +1557,7 @@ grobs = [
   "CueClef",
   "CueEndClef",
   "Custos",
+  "Divisio",
   "DotColumn",
   "Dots",
   "DoublePercentRepeat",
@@ -1633,6 +1641,7 @@ grobs = [
   "SpanBarStub",
   "StaffEllipsis",
   "StaffGrouper",
+  "StaffHighlight",
   "StaffSpacing",
   "StaffSymbol",
   "StanzaNumber",
@@ -1649,6 +1658,7 @@ grobs = [
   "SystemStartBracket",
   "SystemStartSquare",
   "TabNoteHead",
+  "TextMark",
   "TextScript",
   "TextSpanner",
   "Tie",
@@ -1710,6 +1720,7 @@ contexts = [
   "StandaloneRhythmVoice",
   "TabStaff",
   "TabVoice",
+  "Timing",
   "VaticanaLyrics",
   "VaticanaStaff",
   "VaticanaVoice",
@@ -1735,6 +1746,7 @@ translators = [
   "Bend_spanner_engraver",
   "Break_align_engraver",
   "Breathing_sign_engraver",
+  "Caesura_engraver",
   "Centered_bar_number_align_engraver",
   "Chord_name_engraver",
   "Chord_square_engraver",
@@ -1749,6 +1761,7 @@ translators = [
   "Cue_clef_engraver",
   "Current_chord_text_engraver",
   "Custos_engraver",
+  "Divisio_engraver",
   "Dot_column_engraver",
   "Dots_engraver",
   "Double_percent_repeat_engraver",
@@ -1807,6 +1820,7 @@ translators = [
   "Midi_control_change_performer",
   "Multi_measure_rest_engraver",
   "New_fingering_engraver",
+  "Non_musical_script_column_engraver",
   "Note_head_line_engraver",
   "Note_heads_engraver",
   "Note_name_engraver",
@@ -1849,6 +1863,7 @@ translators = [
   "Spanner_break_forbid_engraver",
   "Spanner_tracking_engraver",
   "Staff_collecting_engraver",
+  "Staff_highlight_engraver",
   "Staff_performer",
   "Staff_symbol_engraver",
   "Stanza_number_align_engraver",
@@ -1860,6 +1875,7 @@ translators = [
   "Tab_tie_follow_engraver",
   "Tempo_performer",
   "Text_engraver",
+  "Text_mark_engraver",
   "Text_spanner_engraver",
   "Tie_engraver",
   "Tie_performer",
@@ -1886,6 +1902,7 @@ scheme_functions = [
   "Chord_name_engraver",
   "Chord_square_engraver",
   "Current_chord_text_engraver",
+  "Divisio_engraver",
   "Duration_line_engraver",
   "Finger_glide_engraver",
   "G_",
@@ -1900,11 +1917,15 @@ scheme_functions = [
   "Skip_typesetting_engraver",
   "Span_stem_engraver",
   "Spanner_tracking_engraver",
+  "Staff_highlight_engraver",
+  "Text_mark_engraver",
+  "Trill_spanner_engraver",
   "_i",
   "abs-fontsize-markup",
   "accidental->markup",
   "accidental->markup-italian",
   "accidental-interface::calc-alteration",
+  "accidental-interface::calc-glyph-name",
   "accidental-invalid?",
   "accidental-markup",
   "add-bar-glyph-print-procedure",
@@ -1951,6 +1972,7 @@ scheme_functions = [
   "assoc-get",
   "assoc-keys",
   "assoc-values",
+  "at-bar-line-substitute-caesura-type",
   "aug-modifier",
   "auto-footnote-markup",
   "average",
@@ -1967,7 +1989,7 @@ scheme_functions = [
   "base-length",
   "bass-clarinet-rh-ees-key-stencil",
   "bassoon-bend-info-maker",
-  "bassoon-cc-one-key-stencil",
+  "bassoon-cc-six-key-stencil",
   "bassoon-lh-a-flick-key-stencil",
   "bassoon-lh-c-flick-key-stencil",
   "bassoon-lh-cis-key-stencil",
@@ -1979,6 +2001,7 @@ scheme_functions = [
   "bassoon-lh-lbes-key-stencil",
   "bassoon-lh-lc-key-stencil",
   "bassoon-lh-ld-key-stencil",
+  "bassoon-lh-lhees-key-stencil",
   "bassoon-lh-thumb-cis-key-stencil",
   "bassoon-lh-whisper-key-stencil",
   "bassoon-midline-rule",
@@ -2031,6 +2054,9 @@ scheme_functions = [
   "breathe::midi-length",
   "buildflag",
   "cached-file-contents",
+  "caesura-script-interface::before-line-breaking",
+  "caesura-to-bar-line-or-divisio",
+  "caesura-to-divisio",
   "calc-harmonic-pitch",
   "calc-line-thickness",
   "calc-repeat-slash-count",
@@ -2124,9 +2150,9 @@ scheme_functions = [
   "completize-grob-entry",
   "compound-meter-markup",
   "concat-markup",
-  "conditional-circle-markup-markup",
   "conditional-kern-before",
   "conditional-string-capitalize",
+  "conditional-trill-markup-markup",
   "configuration",
   "cons-fret",
   "constante-hairpin",
@@ -2193,10 +2219,13 @@ scheme_functions = [
   "display-scheme-music",
   "dodecaphonic-no-repeat-rule",
   "done?",
+  "dot-column-interface::pad-by-one-dot-width",
   "dot-has-color",
   "dot-is-inverted",
   "dot-is-parenthesized",
   "dots::calc-dot-count",
+  "dots::calc-dot-stencil",
+  "dots::calc-glyph-name",
   "dots::calc-staff-position",
   "doubleflat-markup",
   "doublesharp-markup",
@@ -2251,10 +2280,10 @@ scheme_functions = [
   "extract-typed-music",
   "eyeglasses-markup",
   "fermata-markup",
+  "figured-bass-markup",
   "fill-line-markup",
   "fill-with-pattern-markup",
   "filled-box-markup",
-  "filtered-map",
   "find-named-props",
   "find-pitch-entry",
   "find-value-to-offset",
@@ -2592,6 +2621,7 @@ scheme_functions = [
   "ly:break-aligned-interface::calc-extent-aligned-anchor",
   "ly:break-aligned-interface::calc-joint-anchor-alignment",
   "ly:break-alignment-interface::calc-positioning-done",
+  "ly:break-alignment-interface::find-nonempty-break-align-group",
   "ly:breathing-sign::divisio-maior",
   "ly:breathing-sign::divisio-maxima",
   "ly:breathing-sign::divisio-minima",
@@ -2852,6 +2882,7 @@ scheme_functions = [
   "ly:make-scale",
   "ly:make-scaling",
   "ly:make-score",
+  "ly:make-skyline",
   "ly:make-spring",
   "ly:make-stencil",
   "ly:make-stream-event",
@@ -2998,6 +3029,7 @@ scheme_functions = [
   "ly:percent-repeat-interface::double-percent",
   "ly:percent-repeat-interface::percent",
   "ly:percent-repeat-iterator::constructor",
+  "ly:perform-text-replacements",
   "ly:performance-headers",
   "ly:performance-write",
   "ly:piano-pedal-bracket::print",
@@ -3092,15 +3124,18 @@ scheme_functions = [
   "ly:side-position-interface::calc-cross-staff",
   "ly:side-position-interface::move-to-extremal-staff",
   "ly:side-position-interface::pure-y-aligned-side",
+  "ly:side-position-interface::set-axis!",
   "ly:side-position-interface::x-aligned-side",
   "ly:side-position-interface::y-aligned-side",
   "ly:simple-music-iterator::constructor",
   "ly:simultaneous-music-iterator::constructor",
+  "ly:skyline->points",
   "ly:skyline-distance",
   "ly:skyline-empty?",
   "ly:skyline-height",
   "ly:skyline-max-height",
   "ly:skyline-max-height-position",
+  "ly:skyline-merge",
   "ly:skyline-pad",
   "ly:skyline-pair?",
   "ly:skyline-touching-point",
@@ -3187,8 +3222,6 @@ scheme_functions = [
   "ly:stencil-translate",
   "ly:stencil-translate-axis",
   "ly:stencil?",
-  "ly:stream-event::dump",
-  "ly:stream-event::undump",
   "ly:stream-event?",
   "ly:string-percent-encode",
   "ly:string-substitute",
@@ -3300,7 +3333,7 @@ scheme_functions = [
   "make-combine-markup",
   "make-compound-meter-markup",
   "make-concat-markup",
-  "make-conditional-circle-markup-markup",
+  "make-conditional-trill-markup-markup",
   "make-connected-line",
   "make-connected-path-stencil",
   "make-cue-clef-set",
@@ -3329,6 +3362,7 @@ scheme_functions = [
   "make-extended-scale",
   "make-eyeglasses-markup",
   "make-fermata-markup",
+  "make-figured-bass-markup",
   "make-fill-line-markup",
   "make-fill-with-pattern-markup",
   "make-filled-box-markup",
@@ -3357,7 +3391,6 @@ scheme_functions = [
   "make-halign-markup",
   "make-harmonic",
   "make-harp-pedal-markup",
-  "make-hashq-cached-function",
   "make-hbracket-markup",
   "make-hcenter-in-markup",
   "make-hspace-markup",
@@ -3399,6 +3432,7 @@ scheme_functions = [
   "make-name-keylist",
   "make-named-spreadsheet",
   "make-natural-markup",
+  "make-no-bar-line",
   "make-non-relative-music",
   "make-normal-size-sub-markup",
   "make-normal-size-super-markup",
@@ -3738,7 +3772,6 @@ scheme_functions = [
   "path-markup",
   "pattern-markup",
   "percussion?",
-  "perform-text-replacements",
   "performance-name-from-headers",
   "piccolo-rh-x-key-stencil",
   "pitch-alteration-semitones",
@@ -3795,8 +3828,6 @@ scheme_functions = [
   "repeat-tie::handle-tab-note-head",
   "replace-markup",
   "replace-step",
-  "replacement-hashtab",
-  "replacement-regexp",
   "replicate-modify",
   "reset-stencil-colors",
   "rest-by-number-markup",
@@ -3941,11 +3972,15 @@ scheme_functions = [
   "stack-thirds",
   "staff-ellipsis::calc-y-extent",
   "staff-ellipsis::print",
+  "staff-highlight::height",
+  "staff-highlight::print",
+  "staff-highlight::width",
   "staff-magnification-is-changing?",
   "staff-symbol-line-count",
   "staff-symbol-line-positions",
   "staff-symbol-line-span",
   "staff-symbol-y-extent-from-line-positions",
+  "staff-symbol::calc-widened-extent",
   "standard-e-stencil",
   "standard-path-stencil",
   "stderr",
@@ -4018,6 +4053,8 @@ scheme_functions = [
   "teaching-accidental-rule",
   "teeny-markup",
   "text-fill-translate",
+  "text-mark-interface::calc-break-visibility",
+  "text-mark-interface::calc-self-alignment-X",
   "text-markup",
   "tie-markup",
   "tie::handle-tab-note-head",
@@ -4121,7 +4158,6 @@ context_properties = [
   "autoBeamCheck",
   "autoBeaming",
   "autoCautionaries",
-  "barAlways",
   "barCheckLastFail",
   "barCheckSynchronize",
   "barExtraVelocity",
@@ -4136,6 +4172,8 @@ context_properties = [
   "breathMarkDefinitions",
   "breathMarkType",
   "busyGrobs",
+  "caesuraType",
+  "caesuraTypeTransform",
   "centerBarNumbers",
   "chordChanges",
   "chordNameExceptions",
@@ -4171,8 +4209,9 @@ context_properties = [
   "currentChordCause",
   "currentChordText",
   "currentCommandColumn",
-  "currentMarkEvent",
   "currentMusicalColumn",
+  "currentPerformanceMarkEvent",
+  "currentRehearsalMarkEvent",
   "dalSegnoTextFormatter",
   "decrescendoSpanner",
   "decrescendoText",
@@ -4429,6 +4468,7 @@ grob_properties = [
   "bound-alignment-interfaces",
   "bound-details",
   "bound-padding",
+  "bound-prefatory-paddings",
   "bounded-by-me",
   "bracket",
   "bracket-flare",
@@ -4486,6 +4526,7 @@ grob_properties = [
   "dot-count",
   "dot-negative-kern",
   "dot-placement-list",
+  "dot-stencil",
   "dots",
   "double-stem-separation",
   "duration-log",
@@ -4501,6 +4542,8 @@ grob_properties = [
   "extra-spacing-height",
   "extra-spacing-width",
   "extroversion",
+  "fa-merge-direction",
+  "fa-styles",
   "figures",
   "filled",
   "flag",
@@ -4797,11 +4840,14 @@ grob_properties = [
   "vertical-skyline-elements",
   "vertical-skylines",
   "virga",
+  "visible-over-note-heads",
   "voiced-position",
   "when",
   "whiteout",
   "whiteout-style",
+  "widened-extent",
   "width",
+  "woodwind-diagram-details",
   "word-space",
   "x-offset",
   "zigzag-length",
